# mcp-sentry

./: Cargo.toml  README.md  build-plan.md  mock_server.py  opportunity-memo.md  policy.yaml  problem-corpus.md
.github/workflows/: ci.yml  release.yml
handoffs/: current-cycle.md
launch/: launch-kit.md
src/: audit.rs  config.rs  main.rs  policy.rs  wrap.rs
